Basic entry rendering working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="trigger">Trigger</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
+    <string name="how_feeling">How feeling</string>
 </resources>
