--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DistractionTracker</string>
+    <string name="app_name">Distraction Tracker</string>
     <string name="dummy_text">Dummy text</string>
     <string name="settings">Settings</string>
     <string name="login">Login</string>
@@ -18,4 +18,8 @@
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
     <string name="how_feeling">How feeling</string>
+    <string name="date_and_time">Date and Time</string>
+    <string name="header_image">Header image</string>
+    <string name="add_distraction">Add Distraction</string>
+    <string name="reload">Reload</string>
 </resources>
